<resources>
    <string name="app_name">AnimaLost</string>
    <string name="trouve">Trouve1</string>
    <string name="perdu">Perdu1</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié</string>
    <string name="connexion_Co">Connexion</string>
    <string name="connexionCompte">Connexion</string>
    <string name="a_adopter">A Adopter</string>
    <string name="connexion_menu">Connexion</string>
    <string name="connexion_act">Connexion</string>
    <string name="inscription_menu">Inscription</string>
    <string name="inscription_act">Inscription</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mot_de_passe_Ins">Mot de passe *:</string>
    <string name="inscription_Ins">Inscription</string>
    <string name="login_Ins">Login *:</string>
    <string name="nom_Ins">Nom *:</string>
    <string name="pr_nom_Ins">Prénom *:</string>
    <string name="bt_inscription_Ins">Inscription</string>
    <string name="login_Co">Login :</string>
    <string name="mot_de_passe_Co">Mot de passe :</string>
    <string name="nom_An">Nom :</string>
    <string name="couleur_An">Couleur :</string>
    <string name="espece_An">Espèce :</string>
    <string name="race_An">Race :</string>
    <string name="statu_An">Statu</string>
    <string name="images_An">Images :</string>
    <string name="nouveau_animal_An">Nouveau Animal</string>
    <string name="ajouter_images_An">Ajouter Images</string>
    <string name="ajouter_animal_An">Ajouter animal</string>
    <string name="nouvelle_annonce_Ano">Nouvelle annonce</string>
    <string name="status_Ano">Status</string>
    <string name="coordonne_Ano">Coordonnée</string>
    <string name="ajouter_annonce_Ano">Ajouter annoncée</string>
    <string name="sujet_rem">Sujet :</string>
    <string name="description_Rem">Description</string>
    <string name="envoyer_Rem">Envoyer</string>
    <string name="nom_Rech">Nom :</string>
    <string name="crit_re_de_recherche_Rech">Critère de recherche</string>
    <string name="couleur_Rech">Couleur :</string>
    <string name="espece_Rech">Espece :</string>
    <string name="race_Rech">Race :</string>
    <string name="date_Rech">Date</string>
    <string name="statut_Rech">Statut :</string>
    <string name="main_ID_Act">MainIDActivity</string>
    <string name="recherche_activity">Recherche</string>
    <string name="calendrier_act">Calendrier</string>
    <string name="historique_act">Historique_Act</string>
    <string name="remarque_act">Remarque</string>
    <string name="nouvelle_annonce_act">Nouvelle Annonce</string>


</resources>

