<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/text_recherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/crit_re_de_recherche_Rech"

            />

        <TextView
            android:id="@+id/text_name_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_recherche"
            android:layout_marginTop="25dp"
            android:text="@string/nom_Rech"

            />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_name_Rech"
            android:layout_alignBottom="@+id/text_name_Rech"
            android:layout_toEndOf="@+id/text_name_Rech"
            android:layout_toRightOf="@+id/text_name_Rech"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/text_couleur_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_name_Rech"
            android:layout_marginTop="25dp"
            android:text="@string/couleur_Rech"

            />

        <Spinner
            android:id="@+id/spinner_couleur_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_couleur_Rech"
            android:layout_toEndOf="@+id/text_couleur_Rech"
            android:layout_toRightOf="@+id/text_couleur_Rech"
            android:ems="20" />


        <TextView
            android:id="@+id/text_espece_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_couleur_Rech"
            android:layout_marginTop="25dp"
            android:text="@string/espece_Rech"

            />

        <Spinner
            android:id="@+id/spinner_espece_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_espece_Rech"
            android:layout_toEndOf="@+id/text_espece_Rech"
            android:layout_toRightOf="@+id/text_espece_Rech"
            android:ems="20" />

        <TextView
            android:id="@+id/text_race_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_espece_Rech"
            android:layout_marginTop="25dp"
            android:text="@string/race_Rech" />

        <Spinner
            android:id="@+id/spinner_race_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_race_Rech"
            android:layout_toEndOf="@+id/text_race_Rech"
            android:layout_toRightOf="@+id/text_race_Rech"
            android:ems="20" />
        <TextView
            android:id="@+id/text_statut_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_race_Rech"
            android:layout_marginTop="25dp"
            android:text="@string/statut_Rech" />
        <Spinner
            android:id="@+id/spinner_statut_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/text_statut_Rech"
            android:layout_toEndOf="@+id/text_statut_Rech"
            android:layout_toRightOf="@+id/text_statut_Rech"
            android:ems="20" />

        <TextView
            android:id="@+id/text_date_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_statut_Rech"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/date_Rech"
            android:textAlignment="center"
            android:textSize="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219" />
        />

        <Button
            android:id="@+id/bt_recherche_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/text_recherche"
            android:layout_toRightOf="@+id/text_recherche"
            android:text="Recherche" />

        <Button
            android:id="@+id/bt_date_Rech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_date_Rech"
            android:text="@string/date_Rech" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>