<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/cadre_animal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp">

        <TextView
        android:id="@+id/title_annonce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/nouvelle_annonce_Ano"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/textAnimal_Ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_annonce"
            android:layout_marginTop="27dp"
            android:text="Animal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/spinner_animal_Ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textAnimal_Ano"
            android:layout_toEndOf="@+id/textAnimal_Ano"
            android:layout_toRightOf="@+id/textAnimal_Ano"
            android:ems="20" />

        <TextView
            android:id="@+id/textStatu_Ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_animal_Ano"
            android:layout_marginTop="27dp"
            android:text="@string/status_Ano"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/spinner_espece_An"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textStatu_Ano"
            android:layout_toEndOf="@+id/textStatu_Ano"
            android:layout_toRightOf="@+id/textStatu_Ano"
            android:ems="20" />
        <TextView
            android:id="@+id/text_description_Ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_espece_An"
            android:layout_marginTop="27dp"
            android:text="Description :"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <EditText
            android:id="@+id/description_Ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_description_Ano"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/bt_ajout_coordonnée"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_Ano"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/coordonne_Ano" />

        <Button
            android:id="@+id/bt_ajout_annonce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/bt_ajout_coordonnée"
            android:layout_margin="10dp"
            android:text="@string/ajouter_annonce_Ano"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>